[package]
name = "rsa-cortex-m4"
version = "0.1.0-wip"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"

[package.metadata.docs.rs]
# may not work: https://github.com/rust-lang/docs.rs/issues/302
rustdoc-args = [ "--html-in-header", "./src/docs-header.html" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# heapless = { git = "https://github.com/japaric/heapless", branch = "const_generics" }
# num-traits = { version = "0.2.14", default-features = false }
rand_core = { version = "0.6", default-features = false }
ref-cast = "1"
subtle = "2.4"
zeroize = { version = "1.2.0", default-features = false, features = ["zeroize_derive"] }

[dev-dependencies]
hex-literal = "0.3"

[features]
default = ["u32"]
u32 = []

[patch.crates-io]
subtle = { git = "https://github.com/nickray/subtle", branch = "conditionally-select-usize" }
