[package]
name = "rsa-cortex-m4"
version = "0.1.0-wip"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"

[package.metadata.docs.rs]
# may not work: https://github.com/rust-lang/docs.rs/issues/302
rustdoc-args = [ "--html-in-header", "./src/docs-header.html" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# heapless = { git = "https://github.com/japaric/heapless", branch = "const_generics" }
# num-traits = { version = "0.2.14", default-features = false }
delog = { version = "0.1.1", optional = true }
digest = { version = "0.9" }
hex-literal = { version = "0.3", optional = true }
rand_core = { version = "0.6", default-features = false }
ref-cast = "1"
sha-1 = { version = "0.9", optional = true, default-features = false }
sha2 = { version = "0.9", optional = true, default-features = false }
subtle = { version = "2.4", optional = true }
zeroize = { version = "1.2.0", default-features = false, features = ["zeroize_derive"] }

[dev-dependencies]
hex-literal = "0.3"

[features]
# default = []
# default = ["ct-maybe", "hex-debug"]
default = ["hex-debug", "sha1-sig", "sha2-sig", "q-inverse"]
u32 = []
u64 = []
hex-debug = ["delog"]
ct-maybe = ["subtle"]
sha1-sig = ["hex-literal", "sha-1"]
sha2-sig = ["hex-literal", "sha2"]
q-inverse = []
extended-testing = []

[patch.crates-io]
# subtle = { git = "https://github.com/nickray/subtle", branch = "conditionally-select-usize" }
# subtle = { git = "https://github.com/nickray/subtle", branch = "no-copy-bound" }
subtle = { git = "https://github.com/nickray/subtle", branch = "remove-copy-bound" }
